--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,7 +6,8 @@
 @import 'normalize';
 @import '../libs/owl.carousel/dist/assets/owl.carousel';
 @import 'my-css';
-// @import 'burger';
+@import 'toggle_menu';
+@import 'burger';
 .clearfix:before,
 .clearfix:after {
 content: " ";
@@ -72,27 +73,29 @@ body {
 }
 .nav {
 	width: 314px;
-	height: 80px;
-	bottom: auto;
+	top: 0;
+	bottom: 0;
 }
 .nav_top {
+	height: 80px;
 	background: #00bfe8;
 	padding: 23px 0 23px 40px;
 }
 .logo {
 	position: relative;
+	padding-left: 30px;
 	color: #0083a9;
 	font-family: Lobster;
 	font-size: 29px;
 	font-weight: 400;
 	line-height: 30px;
 	&:before {
-		width: 40px;
-
 		position: absolute;
 		content: '';
-		top: 0;
-		left: 0;
+		width: 28px;
+		height: 36px;
+		top: -4px;
+		left: -10px;
 		background: url(../img/logo.png) no-repeat;
 	}
 	img {
@@ -101,10 +104,13 @@ body {
 	}
 }
 .nav_main {
+	position: fixed;
+	width: 314px;
+	height: 100%;
 	background-color: #2f3b4c;
 	color: #b0bec5;
 	.user {
-		padding: 40px 30px;
+		padding: 40px 30px 15px;
 		.user_icon {
 			display: block;
 			position: relative;
@@ -113,8 +119,8 @@ body {
 				top: 42px;
 				left: 50px;
 				content: '';
-				width: 11px;
-				height: 11px;
+				width: 18px;
+				height: 18px;
 				border-radius: 50%;
 				border: 4px solid #2f3b4c;
 				background-color: #33de80;
@@ -126,13 +132,13 @@ body {
 			}
 		}
 		.user_name {
-			padding: 10px 0 0 20px;
+	    padding: 22px 0 0 16px;
 			p {
 				font-family: 'Museo Sans Cyrl', sans-serif;
 				color: #ffffff;
 				font-weight: 300;
 				font-size: 25px;
-				line-height: 25px;
+				line-height: 0;
 			}
 			p.loc {
 				color: #b0bec5;
@@ -154,12 +160,12 @@ body {
 	}
 	li {
 		position: relative;
-		padding: 16px 0 16px 72px;
+		padding: 13px 0 13px 72px;
 		border-left: 4px solid #2f3b4c;
 		&:before {
 			content: '';
 			position: absolute;
-			top: 13px;
+			top: 10px;
 			left: 32px;
 			width: 30px;
 			height: 25px;
@@ -203,10 +209,10 @@ body {
 	.cal:before {background-position: 0 -100px;}
 }
 .settings {
-	padding: 30px 0 0 0;
+	padding: 25px 0 0 0;
 	li {
 		position: relative;
-		padding: 13px 0 13px 40px;
+		padding: 10px 0 10px 40px;
 		border-left: 4px solid #2f3b4c;
 		&:hover {
 			background-color: #2a3344;
@@ -222,6 +228,30 @@ body {
 		font-weight: 500;
 		width: 100%;
 	}
+}
+.menu_tog {
+	position: absolute;
+	left: 45px;
+}
+.toggle {
+  position: absolute;
+  top: 15px;
+  right: 25px;
+  display: inline-block;
+  width: 21px;
+  height: 16px;
+}
+.wrap {
+	width: 100%;
+	height: 100%;
+	top: 0;
+	position: fixed;
+	margin-left: 314px;
+	background-color: #eceef2;
+}
+.header {
+	background-color: #fff;
+	height: 80px;
 }
 @media only screen and (max-width : 1920px) {
 
