--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -6,8 +6,8 @@
 @import 'normalize';
 @import '../libs/owl.carousel/dist/assets/owl.carousel';
 @import 'my-css';
-@import 'toggle_menu';
-@import 'burger';
+// @import 'toggle_menu';
+// @import 'burger';
 .clearfix:before,
 .clearfix:after {
 content: " ";
@@ -22,7 +22,8 @@ clear: both;
 .right {
 	float: right;
 }
-a {
+a,
+a:hover {
 	text-decoration: none;
 }
 li {
@@ -69,12 +70,6 @@ body {
 	min-width: 320px;
 	position: relative;
 	line-height: 1.75;
-
-}
-.nav {
-	width: 314px;
-	top: 0;
-	bottom: 0;
 }
 .nav_top {
 	height: 80px;
@@ -107,8 +102,11 @@ body {
 	position: fixed;
 	width: 314px;
 	height: 100%;
+	overflow-y: auto;
 	background-color: #2f3b4c;
 	color: #b0bec5;
+	transform: translateX(-314px);
+	transition: transform 0.3s ease;
 	.user {
 		padding: 40px 30px 15px;
 		.user_icon {
@@ -132,13 +130,13 @@ body {
 			}
 		}
 		.user_name {
-	    padding: 22px 0 0 16px;
+	    padding: 13px 0 0 16px;
 			p {
 				font-family: 'Museo Sans Cyrl', sans-serif;
 				color: #ffffff;
 				font-weight: 300;
 				font-size: 25px;
-				line-height: 0;
+				line-height: 1;
 			}
 			p.loc {
 				color: #b0bec5;
@@ -231,28 +229,101 @@ body {
 }
 .menu_tog {
 	position: absolute;
-	left: 75px;
-	top: 22px;
-}
-.toggle {
-  position: absolute;
-  top: 15px;
-  right: 25px;
-  display: inline-block;
-  width: 21px;
-  height: 16px;
+	top: 7px;
+	left: 25px;
+	.toggle {
+		background: url('../img/Menu-Button.png') no-repeat;
+	  left: 0;
+	  display: inline-block;
+	  width: 21px;
+	  height: 21px;
+		&:before {
+			content: '';
+	    position: absolute;
+			left: -12px;
+			top: 29px;
+			border: 4px solid transparent;
+			border-right: 6px solid #00bfe8;
+			transition: top 1s ease-out 0.5s;
+		}
+	}
+	a.toggle.on:before {
+		display: none;
+	}
 }
 .wrap {
 	width: 100%;
 	height: 100%;
-	top: 0;
-	position: fixed;
-	margin-left: 314px;
+	margin-left: 0;
 	background-color: #eceef2;
+	transition: padding 0.3s ease;
 }
-.header {
+.off {
+		transition: left .3s;
+		margin-left: 0;
+	}
+.section_header {
+	padding: 0 20px;
 	background-color: #fff;
 	height: 80px;
+	line-height: 80px;
+}
+.page-wrap {
+	overflow-x: hidden;
+	width: 100%;
+	&.active {
+		.wrap {
+			padding-left: 314px;
+		}
+		.nav_main {
+			transform: translateX(0);
+		}
+	}
+}
+// search
+.search_box {
+	padding-left: 50px;
+}
+#search input[type="text"]:hover,
+#search input[type="text"]:focus {
+  width: 200px;
+  border: 1px solid #b0bec5;
+  border-radius: 50px;
+  padding-left: 35px;
+}
+#search input[type="text"] {
+  background: #fff url("../img/search.png")no-repeat center left 6px;
+  width: 0px;
+	outline: none;
+  font-size: 13px;
+  color: #b0bec5;
+  padding: 10px 10px 10px 25px;
+  transition: all 0.5s ease-in-out;
+  z-index: 9;
+  border-radius: 50px;
+	border: none;
+  left: 5px;
+}
+.header_wrap {
+	a {
+		display: inline-block;
+	}
+}
+a.head_settings {
+	margin-right: 23px;
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background: url(../img/settings.png) no-repeat;
+}
+a.log_out {
+	display: inline-block;
+	width: 20px;
+	height: 20px;
+	background: url(../img/log-out.png) no-repeat;
+}
+.section_info {
+	padding: 20px 20px;
 }
 @media only screen and (max-width : 1920px) {
 
