--- a/app/scss/toggle_menu.scss
+++ b/app/scss/toggle_menu.scss
@@ -35,16 +35,24 @@
 }
 
 /* on activation */
-.toggle.on span {
-  background-color: transparent;
-}
 .toggle.on span:before {
-  transform: rotate(45deg) translate(5px, 5px);
+  // background-color: transparent;
+  content: '';
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 0;
+  left: 0;
+  border: 5px solid;
+  border-right: 5px solid green;
 }
-.toggle.on span:after {
-  transform: rotate(-45deg) translate(7px, -8px);
-}
-.toggle.on + #menu {
-  opacity: 1;
-  visibility: visible;
-}
+// .toggle.on span:before {
+//   transform: rotate(45deg) translate(1px, 1px);
+// }
+// .toggle.on span:after {
+//   transform: rotate(-45deg) translate(7px, -8px);
+// }
+// .toggle.on + #menu {
+//   opacity: 1;
+//   visibility: visible;
+// }
