--- a/app/scss/main.scss
+++ b/app/scss/main.scss
@@ -71,6 +71,16 @@ body {
 	position: relative;
 	line-height: 1.75;
 }
+.v_fix {
+	&:after {
+		content: '';
+		display: inline-block;
+		width: 0;
+		vertical-align: middle;
+		height: 100%;
+	}
+
+}
 .nav_top {
 	height: 80px;
 	background: #00bfe8;
@@ -241,6 +251,7 @@ body {
 	font-size: 0;
 	display: inline-block;
 	vertical-align: middle;
+	margin-left: 10px;
 	.toggle {
 		position: relative;
 		background: url('../img/Menu-Button.png') no-repeat;
@@ -294,6 +305,7 @@ body {
 .search_box {
 	display: inline-block;
 	vertical-align: middle;
+	margin-left: 25px;
 }
 #search input[type="text"]:hover,
 #search input[type="text"]:focus {
@@ -345,6 +357,7 @@ a.log_out {
 .orders {
 	height: 95px;
 	background: #fff;
+	position: relative;
 }
 .total_icon {
 	display: inline-block;
@@ -352,7 +365,7 @@ a.log_out {
 	height: 100%;
 	background: #ff8761;
 	width: 70px;
-	margin-right: 25px;
+	margin-right: 20px;
 	&:after {
 		content: '';
 		display: inline-block;
@@ -362,41 +375,82 @@ a.log_out {
 	}
 }
 .title_sales {
-	text-align: center;
+	vertical-align: middle;
 	text-transform: uppercase;
 	display: inline-block;
 	font-weight: 500;
 	font-family: 'Myriad Pro', sans-serif;
 	font-size: 16px;
 	color: #ff8761;
-	vertical-align: middle;
 	span {
+		line-height: 18px;
 		display: block;
-		font-size: 14px;
+		font-size: 18px;
 		color: #000;
-
 	}
 }
 .quote_icon {
 	display: inline-block;
 	text-align: center;
-	text-align: center;
 	height: 100%;
 	background: #57bdde;
 	width: 70px;
+	margin-right: 20px;
 	&:after {
 		content: '';
 		display: inline-block;
 		width: 0;
 		vertical-align: middle;
 		height: 100%;
+	}
+}
+.title_quote {
+	vertical-align: middle;
+	text-transform: uppercase;
+	display: inline-block;
+	font-weight: 500;
+	font-family: 'Myriad Pro', sans-serif;
+	font-size: 16px;
+	color: #ff8761;
+	span {
+		line-height: 18px;
+		display: block;
+		font-size: 18px;
+		color: #000;
 	}
 }
 .orders_icon {
+	display: inline-block;
+	text-align: center;
 	text-align: center;
 	height: 100%;
-	background: #b198dc;
 	width: 70px;
+	margin-right: 20px;
+	background: #b198dc;
+}
+.title_orders {
+	vertical-align: middle;
+	text-transform: uppercase;
+	display: inline-block;
+	font-weight: 500;
+	font-family: 'Myriad Pro', sans-serif;
+	font-size: 16px;
+	color: #ff8761;
+	span {
+		line-height: 18px;
+		display: block;
+		font-size: 18px;
+		color: #000;
+	}
+}
+.products_icon {
+	display: inline-block;
+	text-align: center;
+	text-align: center;
+	height: 100%;
+	width: 70px;
+	margin-right: 20px;
+	background: #6dc7be;
 	&:after {
 		content: '';
 		display: inline-block;
@@ -405,17 +459,19 @@ a.log_out {
 		height: 100%;
 	}
 }
-.products_icon {
-	text-align: center;
-	height: 100%;
-	background: #6dc7be;
-	width: 70px;
-	&:after {
-		content: '';
-		display: inline-block;
-		width: 0;
-		vertical-align: middle;
-		height: 100%;
+.title_products {
+	vertical-align: middle;
+	text-transform: uppercase;
+	display: inline-block;
+	font-weight: 500;
+	font-family: 'Myriad Pro', sans-serif;
+	font-size: 16px;
+	color: #ff8761;
+	span {
+		line-height: 18px;
+		display: block;
+		font-size: 18px;
+		color: #000;
 	}
 }
 .visitors {
@@ -436,15 +492,24 @@ a.log_out {
 	background-color: #fff;
 	padding: 10px;
 }
+//Profile
 .profile {
 	text-align: center;
 	position: relative;
-	background: url('../img/bg-profile.png') no-repeat;
-	background-size: contain;
 	height: 400px;
 	background-color: #fff;
 	color: #fff;
-	padding: 50px 0 0 0;
+}
+.prof_head {
+	text-align: center;
+	background: url('../img/bg-profile.png') no-repeat;
+	background-size: cover;
+	position: relative;
+	width: 100%;
+	height: 155px;
+	padding-top: 50px;
+	margin-bottom: 80px;
+	// height: 100%;
 	p {
 		font-weight: 700;
 		font-size: 20px;
@@ -455,12 +520,173 @@ a.log_out {
 		font-weight: 300;
 		padding: 5px 0 20px;
 	}
-	img {
+}
+.prof_avatar {
+	position: absolute;
+	width: 100%;
+	.ava {
+		width: 85px;
+		height: 85px;
 		border-radius: 50%;
 		border: 5px solid #fff;
+		bottom: -50%;
 	}
 }
-
+.prof_content {
+	color: #78909c;
+	font-family: "Museo Sans";
+	font-size: 15px;
+	font-weight: 500;
+	line-height: 19px;
+	padding-bottom: 40px;
+}
+.prof_bot {
+	line-height: 25px;
+	.prof_bot_item {
+		display: inline-block;
+		position: relative;
+		margin-right: 57px;
+		&:after {
+			content: '';
+			width: 1px;
+			height: 49px;
+			background-color: #cfd8dc;
+			position: absolute;
+			top: 0;
+			right: -25px;
+		}
+		&:last-child {
+			margin-right: 0;
+			&:after {
+			display: none;
+			}
+		}
+	}
+	p.quantity {
+		color: #2f3b4c;
+		font-size: 33px;
+		font-weight: 30;
+	}
+	p.descr {
+		color: #78909c;
+		font-size: 17px;
+		font-weight: 500;
+	}
+}
+//Profile End
+.section_progressbar {
+	background-color: #fff;
+}
+.progress {
+	height: 20px;
+	margin-bottom: 20px;
+	overflow: hidden;
+	background-color: #f5f5f5;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+	box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+}
+.progress {
+	background-image: -webkit-gradient(linear,left 0,left 100%,from(#ebebeb),to(#f5f5f5));
+	background-image: -webkit-linear-gradient(top,#ebebeb 0,#f5f5f5 100%);
+	background-image: -moz-linear-gradient(top,#ebebeb 0,#f5f5f5 100%);
+	background-image: linear-gradient(to bottom,#ebebeb 0,#f5f5f5 100%);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffebebeb',endColorstr='#fff5f5f5',GradientType=0);
+}
+.progress {
+	height: 8px;
+	background-color: #ebeef1;
+	background-image: none;
+	box-shadow: none;
+	border-bottom: 1px solid #dae4e8;
+}
+.progress-bar {
+	float: left;
+	width: 0;
+	height: 100%;
+	font-size: 12px;
+	line-height: 20px;
+	color: #fff;
+	text-align: center;
+	background-color: #428bca;
+	-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
+	box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
+	-webkit-transition: width .6s ease;
+	transition: width .6s ease;
+}
+.progress-bar {
+	background-image: -webkit-gradient(linear,left 0,left 100%,from(#428bca),to(#3071a9));
+	background-image: -webkit-linear-gradient(top,#428bca 0,#3071a9 100%);
+	background-image: -moz-linear-gradient(top,#428bca 0,#3071a9 100%);
+	background-image: linear-gradient(to bottom,#428bca 0,#3071a9 100%);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff428bca',endColorstr='#ff3071a9',GradientType=0);
+}
+.progress-bar {
+	box-shadow: none;
+	border-radius: 3px;
+	background-color: #0090D9;
+	background-image: none;
+	-webkit-transition: all 1000ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+	-moz-transition: all 1000ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+	-ms-transition: all 1000ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+	-o-transition: all 1000ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+	transition: all 1000ms cubic-bezier(0.785, 0.135, 0.150, 0.860);
+	-webkit-transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860);
+	-moz-transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860);
+	-ms-transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860);
+	-o-transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860);
+	transition-timing-function: cubic-bezier(0.785, 0.135, 0.150, 0.860);
+}
+.progress-bar-success {
+	background-image: -webkit-gradient(linear,left 0,left 100%,from(#5cb85c),to(#449d44));
+	background-image: -webkit-linear-gradient(top,#5cb85c 0,#449d44 100%);
+	background-image: -moz-linear-gradient(top,#5cb85c 0,#449d44 100%);
+	background-image: linear-gradient(to bottom,#5cb85c 0,#449d44 100%);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5cb85c',endColorstr='#ff449d44',GradientType=0);
+}
+.progress-bar-success {
+	background-color: #0AA699;
+	background-image: none;
+}
+.progress-bar-info {
+	background-image: -webkit-gradient(linear,left 0,left 100%,from(#5bc0de),to(#31b0d5));
+	background-image: -webkit-linear-gradient(top,#5bc0de 0,#31b0d5 100%);
+	background-image: -moz-linear-gradient(top,#5bc0de 0,#31b0d5 100%);
+	background-image: linear-gradient(to bottom,#5bc0de 0,#31b0d5 100%);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff5bc0de',endColorstr='#ff31b0d5',GradientType=0);
+}
+.progress-bar-info {
+	background-color: #0090D9;
+	background-image: none;
+}
+.progress-bar-warning {
+	background-image: -webkit-gradient(linear,left 0,left 100%,from(#f0ad4e),to(#ec971f));
+	background-image: -webkit-linear-gradient(top,#f0ad4e 0,#ec971f 100%);
+	background-image: -moz-linear-gradient(top,#f0ad4e 0,#ec971f 100%);
+	background-image: linear-gradient(to bottom,#f0ad4e 0,#ec971f 100%);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff0ad4e',endColorstr='#ffec971f',GradientType=0);
+}
+.progress-bar-warning {
+	background-color: #FDD01C;
+	background-image: none;
+}
+.progress-bar-danger {
+	background-image: -webkit-gradient(linear,left 0,left 100%,from(#d9534f),to(#c9302c));
+	background-image: -webkit-linear-gradient(top,#d9534f 0,#c9302c 100%);
+	background-image: -moz-linear-gradient(top,#d9534f 0,#c9302c 100%);
+	background-image: linear-gradient(to bottom,#d9534f 0,#c9302c 100%);
+	background-repeat: repeat-x;
+	filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffd9534f',endColorstr='#ffc9302c',GradientType=0);
+}
+.progress-bar-danger {
+	background-color: #F35958;
+	background-image: none;
+}
 @media only screen and (max-width : 1920px) {
 
 }
